src/components/app/app.css
@import 'tailwindcss/base';
@import 'tailwindcss/components';
@import 'tailwindcss/utilities';

@font-face {
  font-family: 'Anurati';
  font-style: normal;
  font-weight: normal;
  src: local('Anurati'), url('../../assets/anurati.otf') format('opentype');
}

body {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

#root {
  min-height: 100vh;
}

.anurati-font {
  font-family: 'Anurati', sans-serif;
}

